[package]
name = "use-bar"
description = "Primitive OHLC and OHLCV bar vocabulary for RustUse quantitative crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-bar"
keywords = ["quant", "bar", "ohlc", "ohlcv", "rustuse"]
categories = ["data-structures", "science"]

[dependencies]
use-market-price.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true