[package]
name = "use-drawdown"
description = "Primitive drawdown vocabulary for RustUse quantitative crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-drawdown"
keywords = ["quant", "drawdown", "risk", "equity", "rustuse"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true