[package]
name = "use-portfolio-weight"
description = "Primitive portfolio weight vocabulary for RustUse quantitative crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-portfolio-weight"
keywords = ["quant", "portfolio", "weight", "asset", "rustuse"]
categories = ["data-structures", "science"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true